--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "concurrently \"nodemon server.js\" \"cd client && npm start\"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon server.js"
+    "server": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -22,8 +22,10 @@
   },
   "homepage": "https://github.com/Blondish/MyItineraryProject#readme",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "concurrently": "^5.0.0",
     "express": "^4.17.1",
+    "express-validator": "^6.2.0",
     "mongoose": "^5.7.5"
   }
 }
