--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "concurrently \"nodemon server.js\" \"cd client && npm start\"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "node server.js"
+    "server": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -24,8 +24,10 @@
   "dependencies": {
     "bcrypt": "^3.0.6",
     "concurrently": "^5.0.0",
+    "config": "^3.2.4",
     "express": "^4.17.1",
     "express-validator": "^6.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.5"
   }
 }
